launcher refactor